- Summary: 	Fixed Bugzilla #283789 Designer Defects found by "FindBugs" (partially) - Bugzilla Bug(s) Resolved: 	#283789 - Description: 	Fixed some performance issues reported by FindBugs. - Tests Description: 	Manual Test - Code Reviewer: 	None - Files Added: 	None - Files Edited: 	/org.eclipse.birt.report.designer.ui.views/src/org/eclipse/birt/report/designer/internal/ui/views/attributes/widget/AdvancePropertyDescriptor.java 	/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/data/ui/dataset/DataSetUIUtil.java 	/org.eclipse.birt.report.designer.ui.editors/src/org/eclipse/birt/report/designer/internal/ui/views/property/ReportPropertySheetPage.java 	/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/internal/ui/util/RTFHTMLHandler.java 	/org.eclipse.birt.report.designer.ui/src/org/eclipse/birt/report/designer/ui/dialogs/StyleBuilder.java 	/org.eclipse.birt.report.designer.ui.views/src/org/eclipse/birt/report/designer/internal/ui/views/data/providers/VariableNodeProvider.java 	/org.eclipse.birt.report.designer.ui.views/src/org/eclipse/birt/report/designer/internal/ui/views/data/providers/VariablesNodeProvider.java - Files Deleted: 	None - Notes to Build Team: 	None - Notes to Developers: 	None - Notes to QA: 	None - Notes to Documentation: 	None